word wrap popover titles and content. correct annotation hovering and user log-in hovering by adjusting placement and z-index properties.

--- a/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
@@ -790,6 +790,11 @@ table th.btn-container .btn{
 	#gutter .icon{
 		float: left;
 	}
+	#gutter {
+		z-index: 500;
+		overflow-x: visible;
+		overflow-y: visible; 
+	}
     /**----------------------------------------**/
 
     
@@ -1488,6 +1493,14 @@ table th.btn-container .btn{
     
     .popover{
     	font-size: 13px;
+    }
+    
+    .popover-title {
+    	word-break: break-word;
+    }
+    
+    .popover-content {
+    	word-break: break-word;
     }
     
      .abstract-popover{
